--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,15 @@
 {
   "compilerOptions": {
-    "lib": ["ESNext"],
+    "target": "ESNext",
     "module": "esnext",
-    "target": "esnext",
-    "moduleResolution": "bundler",
-    "moduleDetection": "force",
-    "allowImportingTsExtensions": true,
-    "noEmit": true,
-    "composite": true,
-    "strict": true,
-    "downlevelIteration": true,
-    "skipLibCheck": true,
-    "jsx": "react-jsx",
-    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "allowJs": true,
-    "types": [
-      "bun-types" // add Bun global
-    ]
-  }
+    "esModuleInterop": true,
+    "sourceMap": true,
+    "outDir": "./dist",
+    "skipLibCheck": true,
+    "strict": true,
+    "moduleResolution": "node"
+  },
+  "include": ["**/*.ts", "tests/**/*.ts"],
+  "exclude": ["node_modules"]
 }
